procaptcha: remove hats

--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -16,9 +16,9 @@
     "@fingerprintjs/fingerprintjs": "^3.3.6",
     "@polkadot/api": "9.13.6",
     "@polkadot/api-contract": "9.13.6",
-    "@polkadot/extension-base": "^0.44.1",
-    "@polkadot/extension-dapp": "^0.44.1",
-    "@polkadot/extension-inject": "^0.44.1",
+    "@polkadot/extension-base": "0.44.8",
+    "@polkadot/extension-dapp": "0.44.8",
+    "@polkadot/extension-inject": "0.44.8",
     "@polkadot/rpc-provider": "9.13.6",
     "@polkadot/types": "9.13.6",
     "@polkadot/util": "10.3.1",
