--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -12,10 +12,10 @@
     "build:config": "tsc --project",
     "cli": "node ./dist/cli/cli.js",
     "setup": "node ./dist/cli/setup.js",
-    "start": "API_PORT=8282 node ./dist/cli/start.js",
+    "start": "node ./dist/cli/start.js",
     "serve": "npm run setup && npm run start",
     "mnemonic": "ts-node ./scripts/generateMnemonic.ts",
-    "test": "ts-mocha tests/**/*.test.ts --timeout 120000 --recursive --exit",
+    "test": "ts-mocha tests/**/*.test.ts --timeout 12000000 --recursive --exit",
     "coverage": "npx c8 npm run test",
     "populate-data": "ts-node ./tests/dataUtils/populateDatabase.ts",
     "dev-provider-register": "npm run cli -- provider_register --fee=10 --origin=https://localhost:8282 --payee=Provider --address=$PROVIDER_ADDRESS",
