provider: Make it work with aadbbed50ede27817158c7517f13f6f61c9cf000 of protocol

--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -9,6 +9,7 @@
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
     "build:test": "tsc --build --verbose tsconfig.test.json",
+    "build:scripts": "tsc --build --verbose tsconfig.scripts.json",
     "build:config": "tsc --project",
     "cli": "node ./dist/cli/cli.js",
     "setup": "node ./dist/cli/setup.js",
