provider: Remove more debug

--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -118,14 +118,10 @@ jobs:
         run: |
           cd workspaces
           echo $(npx tsc --version)
-          echo $(ls)
-          echo $(ls packages/common)
-          echo $(ls packages/contract)
-          echo $(ls packages/provider)
-          cd packages/common && echo $(pwd) && echo $(ls) && echo $(pwd) && npm run build
-          cd ../datasets && echo $(pwd) && echo $(ls) && echo $(git show) && npm run build
-          cd ../contract && echo $(pwd) && echo $(ls) && echo $(git show) && npm run build
-          cd ../provider && echo $(pwd) && echo $(ls) && echo $(git show) && npm run build
+          cd packages/common && echo $(pwd) && echo $(git show) && npm run build
+          cd ../datasets && echo $(pwd) && npm run build
+          cd ../contract && echo $(pwd) && echo $(git show) && npm run build
+          cd ../provider && echo $(pwd) && echo $(git show) && npm run build
 
       - name: Setup the environment and run the unit tests
         run: |
