--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -71,8 +71,8 @@ jobs:
 
       - if: steps.image-cache.outputs.cache-hit != 'true'
         run: |
-          docker pull prosopo/substrate:demo-v1.0.5
-          docker save -o ~/image-cache/prosopo.tar prosopo/substrate:demo-v1.0.5
+          docker pull prosopo/substrate:dev-aura-bd39450fa8794ef385be198d239372a469a73b39
+          docker save -o ~/image-cache/prosopo.tar prosopo/substrate:dev-aura-bd39450fa8794ef385be198d239372a469a73b39
           docker pull mongo:5.0.4
           docker save -o ~/image-cache/mongo.tar mongo:5.0.4
 
