--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -20,6 +20,9 @@
     "react-i18next": "^11.18.6"
   },
   "devDependencies": {
+    "@polkadot/keyring": "10.3.1",
+    "@polkadot/util-crypto": "10.3.1",
+    "@polkadot/util": "10.3.1",
     "@types/node": "^18.7.18",
     "typescript": "^4.8.3",
     "@types/chai": "^4.3.4",
