--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -19,9 +19,6 @@
     "test": "ts-mocha tests/**/*.test.ts --timeout 12000000 --recursive --exit",
     "coverage": "npx c8 npm run test",
     "populate-data": "ts-node ./tests/dataUtils/populateDatabase.ts",
-    "dev-provider-register": "npm run cli -- provider_register --fee=10 --origin=https://localhost:8282 --payee=Provider --address=$PROVIDER_ADDRESS",
-    "dev-provider-stake": "npm run cli -- provider_update --value 2000000000000 --address=$PROVIDER_ADDRESS",
-    "dev-provider-dataset": "npm run cli -- provider_add_data_set --file ./tests/mocks/data/captchas.json",
     "lint": "npx eslint .",
     "lint:fix": "npx eslint . --fix"
   },
@@ -54,6 +51,7 @@
     "zod": "^3.17.9"
   },
   "devDependencies": {
+    "@prosopo/dev": "^0.1.11",
     "@types/chai-as-promised": "^7.1.5",
     "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^10.0.1",
