common: Move types to a package

--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -15,5 +15,10 @@
   "include": [
     "./src/**/*.ts",
     "./src/**/*.json"
+  ],
+  "references": [
+    {
+      "path": "../types"
+    },
   ]
 }
