--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prosopo/types": "^0.1.11",
     "@types/react": "^18.0.25",
+    "dotenv": "^16.0.1",
     "i18next": "^21.9.2",
     "i18next-browser-languagedetector": "^6.1.5",
     "i18next-http-backend": "^1.4.4",
@@ -21,15 +23,15 @@
   },
   "devDependencies": {
     "@polkadot/keyring": "10.3.1",
-    "@polkadot/util-crypto": "10.3.1",
     "@polkadot/util": "10.3.1",
-    "@types/node": "^18.7.18",
-    "typescript": "^4.8.3",
+    "@polkadot/util-crypto": "10.3.1",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
+    "@types/node": "^18.7.18",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3"
   },
   "repository": {
     "type": "git",
