--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -34,13 +34,12 @@
     "@prosopo/common": "^0.1.11",
     "@prosopo/contract": "^0.1.11",
     "@prosopo/datasets": "^0.1.11",
+    "@prosopo/types": "^0.1.11",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "consola": "^2.15.3",
     "cors": "^2.8.5",
     "cron": "^2.1.0",
     "cron-parser": "^4.5.0",
-    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongodb": "4.8.1",
     "mongoose": "^6.7.2",
