--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -119,6 +119,7 @@ jobs:
           cd workspaces
           echo $(npx tsc --version)
           cd packages/common && echo $(pwd) && echo $(git show) && npm run build
+          cd ../types && echo $(pwd) && echo $(git show) && npm run build
           cd ../datasets && echo $(pwd) && npm run build
           cd ../contract && echo $(pwd) && echo $(git show) && npm run build
           cd ../provider && echo $(pwd) && echo $(git show) && npm run build
