--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -128,6 +128,7 @@ jobs:
         run: |
           cd workspaces
           git status | head -n 1
+          cp env.development .env.development
           cd packages/provider
           git status | head -n 1
           docker container ls
