--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -120,7 +120,7 @@ jobs:
           echo $(npx tsc --version)
           cd packages/common && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
           cd ../types && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
-          cd ../datasets && echo $(pwd) && && echo $(git rev-parse HEAD) && npm run build
+          cd ../datasets && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
           cd ../contract && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
           cd ../provider && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
 
