--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -44,6 +44,7 @@ jobs:
           git fetch
           git checkout ${{ github.head_ref }} || git checkout ${{ github.base_ref }} || git checkout develop
           echo "On workspaces branch $(git rev-parse --abbrev-ref HEAD)"
+          git submodule update --init --recursive --force --checkout
           git pull
 
       - name: Clone scripts repository
