--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -35,6 +35,7 @@
     "@prosopo/contract": "^0.1.11",
     "@prosopo/datasets": "^0.1.11",
     "@prosopo/types": "^0.1.11",
+    "@prosopo/env": "^0.1.11",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "cors": "^2.8.5",
