provider: add env as tsconfig reference

--- a/packages/provider/tsconfig.json
+++ b/packages/provider/tsconfig.json
@@ -16,13 +16,16 @@
   ],
   "references": [
     {
-      "path": "../datasets"
+      "path": "../common"
     },
     {
       "path": "../contract"
     },
     {
-      "path": "../common"
+      "path": "../datasets"
+    },
+    {
+      "path": "../env"
     },
     {
       "path": "../types"
