Adding env module to monorepo

--- a/packages/env/.gitignore
+++ b/packages/env/.gitignore
@@ -1,27 +1,3 @@
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
-
-# Swap the comments on the following lines if you don't wish to use zero-installs
-# Documentation here: https://yarnpkg.com/features/zero-installs
-# !.yarn/cache
-.pnp.*
-
-node_modules
-**/node_modules**/
-/.idea
-/.vscode
-.yarn
-*.tsbuildinfo
-.DS_Store
-mongodb
-
-# Below is Github's node gitignore template,
-# ignoring the node_modules part, as it'd ignore every node_modules, and we have some for testing
-
 # Logs
 logs
 *.log
@@ -29,6 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+.pnpm-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -44,6 +21,7 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
+*.lcov
 
 # nyc test coverage
 .nyc_output
@@ -61,17 +39,29 @@ bower_components
 build/Release
 
 # Dependency directories
-#node_modules/
+node_modules/
 jspm_packages/
 
-# TypeScript v1 declaration files
-typings/
+# Snowpack dependency directory (https://snowpack.dev/)
+web_modules/
+
+# TypeScript cache
+*.tsbuildinfo
 
 # Optional npm cache directory
 .npm
 
 # Optional eslint cache
 .eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
 
 # Optional REPL history
 .node_repl_history
@@ -82,17 +72,40 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
+.parcel-cache
 
-# next.js build output
+# Next.js build output
 .next
+out
 
-# nuxt.js build output
+# Nuxt.js build / generate output
 .nuxt
+dist
+
+# Gatsby files
+.cache/
+# Comment in the public line in if your project uses Gatsby and not Next.js
+# https://nextjs.org/blog/next-9-1#public-directory-support
+# public
 
 # vuepress build output
 .vuepress/dist
+
+# vuepress v2.x temp and cache directory
+.temp
+.cache
+
+# Docusaurus cache and generated files
+.docusaurus
 
 # Serverless directories
 .serverless/
@@ -103,29 +116,15 @@ typings/
 # DynamoDB Local files
 .dynamodb/
 
-build/
+# TernJS port file
+.tern-port
 
-/.yarn/cache
-# This is the Yarn build state; it's local to each clone
-/.yarn/build-state.yml
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
 
-# This is the Yarn install state cache, it can be rebuilt anytime
-/.yarn/install-state.gz
-
-secrets.json
-.env*
-
-# Ingnore build target
-contracts/target/
-
-/db/
-/data/
-
-
-/.chain-test/
-/.db-test/
-
-/database_accounts.json
-/.database_accounts.json
-
-chain-data
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
