--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -18,16 +18,22 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
     "@mui/styles": "^5.8.3",
+    "@polkadot/extension-dapp": "0.44.8",
+    "@polkadot/extension-inject": "0.44.8",
+    "@polkadot/types": "9.13.6",
     "@prosopo/common": "^0.1.11",
     "@prosopo/procaptcha": "^0.1.11",
+    "@prosopo/types": "^0.1.11",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "eslint": "^8.20.0",
     "typescript": "^4.7.4"
   },
