--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -17,8 +17,6 @@ jobs:
         os: [ ubuntu-latest ]
     runs-on: ${{ matrix.os }}
 
-
-
     steps:
       - name: Check github refname
         run: |
@@ -27,37 +25,16 @@ jobs:
           echo ${{ github.head_ref }}
           echo ${{ github.base_ref }}
 
-      - name: Check if workspaces branch exists
-        run: |
-          if [[ $(git ls-remote --heads https://github.com/prosopo/workspaces.git ${{ github.head_ref }}) ]]; then
-            echo "Workspaces branch exists"
-            echo "WORKSPACES_BRANCH=${{ github.head_ref }}" >> $GITHUB_ENV
-            else
-            echo "Workspaces branch does not exist"
-            echo "WORKSPACES_BRANCH=${{ github.base_ref }}" >> $GITHUB_ENV
-          fi
-
       - name: Remove stopped containers
         run: docker rm $(docker ps -a -q) || true
 
-      - name: Clone workspaces
+      - name: Clone captcha
         uses: actions/checkout@v3
         with:
-          ref: ${{ env.WORKSPACES_BRANCH }}
-          repository: prosopo/workspaces
-          path: workspaces
+          ref: ${{ github.head_ref }}
+          repository: prosopo/captcha
+          path: captcha
           submodules: recursive
-          #ssh-key: ${{ secrets.SSH_KEY }}
-          #ssh-strict: false
-
-      - name: Checkout correct workspaces branch
-        run: |
-          cd workspaces
-          git fetch
-          git checkout ${{ github.head_ref }} || git checkout ${{ github.base_ref }} || git checkout develop
-          echo "On workspaces branch $(git rev-parse --abbrev-ref HEAD)"
-          git submodule update --init --recursive --force --checkout
-          git pull
 
       - name: Clone scripts repository
         uses: actions/checkout@v3
@@ -101,15 +78,6 @@ jobs:
           cd scripts
           docker compose --file ./docker/docker-compose.development.yml up -d
 
-      - name: Checkout correct submodule branches
-        run: |
-          cd workspaces
-          git submodule foreach 'echo $(git remote -v)'
-          git submodule foreach 'git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"'
-          git submodule foreach 'git fetch origin'
-          git submodule foreach 'git checkout ${{ github.head_ref }} || git checkout ${{ github.base_ref }} || git checkout develop'
-          git submodule foreach 'echo "pulling..." && git pull'
-
       - id: node-cache
         uses: actions/cache@v3
         with:
@@ -125,22 +93,24 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd workspaces
+          cd captcha
+          ls .
           npm install
 
       - name: Build provider and dependencies
         run: |
-          cd workspaces
+          cd captcha
           echo $(npx tsc --version)
           cd packages/common && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
           cd ../types && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
+          cd ../env && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
           cd ../datasets && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
           cd ../contract && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
           cd ../provider && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
 
       - name: Setup the environment and run the unit tests
         run: |
-          cd workspaces
+          cd captcha
           git status | head -n 1
           cd packages/provider
           cp env.development .env.development
