--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "tsc --build --clean",
-    "build": "tsc --build --verbose",
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production",
     "lint": "npx eslint .",
     "lint:fix": "npx eslint . --fix"
   },
@@ -28,14 +29,27 @@
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.5",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.5",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint": "^8.20.0",
-    "typescript": "^4.7.4"
+    "html-webpack-plugin": "^5.5.1",
+    "style-loader": "^3.3.2",
+    "typescript": "^4.7.4",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3"
   },
   "repository": {
     "type": "git",
