import fixes and webpack compression

--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
   ],
   "devDependencies": {
     "depcheck": "^1.4.3",
+    "eslint-plugin-absolute-imports-only": "^1.0.1",
     "nodemon": "^2.0.20",
     "npm-check-updates": "^15.3.4",
     "tslib": "^2.4.0",
