--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -39,6 +39,8 @@
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "babel-loader": "^9.1.2",
+    "babel-plugin-lodash": "^3.3.4",
+    "compression-webpack-plugin": "^10.0.0",
     "css-loader": "^6.7.3",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
@@ -46,8 +48,10 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.2",
+    "terser-webpack-plugin": "^5.3.7",
     "typescript": "^4.7.4",
     "webpack": "^5.81.0",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3"
   },
