Move util functions from datasets into common. Fix dependencies in all packages. Update webpack config for procaptcha-react. Fix merge conflicts that were causing builds to fail

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -42,5 +42,6 @@
   "homepage": "https://github.com/prosopo/common#readme",
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
-  }
+  },
+  "sideEffects": false
 }
