--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -29,19 +29,9 @@
     }
   },
   "dependencies": {
-    "@polkadot/api": "9.13.6",
-    "@polkadot/api-contract": "9.13.6",
-    "@polkadot/keyring": "10.3.1",
-    "@polkadot/rpc-provider": "9.13.6",
-    "@polkadot/types": "9.13.6",
-    "@polkadot/types-create": "9.13.6",
     "@polkadot/util": "10.3.1",
-    "@polkadot/util-crypto": "10.3.1",
     "@prosopo/common": "^0.1.11",
     "@prosopo/types": "^0.1.11",
-    "bn.js": "^5.2.1",
-    "consola": "^2.15.3",
-    "zod": "^3.17.9",
     "axios": "^0.27.2"
   },
   "devDependencies": {
@@ -65,5 +55,6 @@
   "description": "Datasets for use with providers",
   "directories": {
     "test": "tests"
-  }
+  },
+  "sideEffects": false
 }
