--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,11 +17,12 @@
   "author": "PROSOPO LIMITED <info@prosopo.io>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/prosopo/api/issues"
+    "url": "https://github.com/prosopo/captcha/issues"
   },
-  "homepage": "https://github.com/prosopo/api#readme",
+  "homepage": "https://github.com/prosopo/captcha#readme",
   "dependencies": {
-    "@prosopo/datasets": "^0.1.11",
+    "@prosopo/types": "^0.1.11",
     "axios": "^0.27.2"
-  }
+  },
+  "sideEffects": false
 }
