--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -40,9 +40,8 @@
     "@polkadot/util": "10.3.1",
     "@polkadot/util-crypto": "10.3.1",
     "@prosopo/common": "^0.1.11",
-    "@prosopo/datasets": "^0.1.11",
     "@prosopo/types": "^0.1.11",
-    "bn.js": "^5.2.1"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.30.7",
@@ -65,5 +64,6 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
-  "description": ""
+  "description": "",
+  "sideEffects": false
 }
