--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -24,9 +24,9 @@
     "@polkadot/types": "9.13.6",
     "@prosopo/common": "^0.1.11",
     "@prosopo/procaptcha": "^0.1.11",
-    "@prosopo/types": "^0.1.11",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "schema-utils": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.5",
@@ -36,7 +36,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
     "@types/react": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.30.7",
     "babel-loader": "^9.1.2",
     "babel-plugin-lodash": "^3.3.4",
@@ -46,15 +46,17 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.5",
     "style-loader": "^3.3.2",
     "terser-webpack-plugin": "^5.3.7",
     "typescript": "^4.7.4",
-    "webpack": "^5.81.0",
+    "webpack": "^5.82.0",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.2",
-    "webpack-dev-server": "^4.13.3"
+    "webpack-dev-server": "^4.13.3",
+    "webpack-json-access-optimizer": "^1.1.0"
   },
   "repository": {
     "type": "git",
