--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -26,7 +26,6 @@
     "@polkadot/util-crypto": "10.3.1",
     "@prosopo/api": "^0.1.11",
     "@prosopo/contract": "^0.1.11",
-    "@prosopo/datasets": "^0.1.11",
     "@prosopo/types": "^0.1.11",
     "@prosopo/common": "^0.1.11",
     "axios": "^0.27.2"
@@ -54,5 +53,6 @@
   "description": "",
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
-  }
+  },
+  "sideEffects": false
 }
