--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -47,8 +47,7 @@
     "nodejs-polars": "^0.6.0",
     "pm2": "^5.2.0",
     "yargs": "^17.5.1",
-    "yargs-parser": "^21.0.1",
-    "zod": "^3.17.9"
+    "yargs-parser": "^21.0.1"
   },
   "devDependencies": {
     "@types/chai-as-promised": "^7.1.5",
@@ -77,5 +76,6 @@
   "bugs": {
     "url": "https://github.com/prosopo/provider/issues"
   },
-  "homepage": "https://github.com/prosopo/provider#readme"
+  "homepage": "https://github.com/prosopo/provider#readme",
+  "sideEffects": false
 }
