--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,5 +17,15 @@
   "bugs": {
     "url": "https://github.com/prosopo/server/issues"
   },
-  "homepage": "https://github.com/prosopo/server#readme"
+  "homepage": "https://github.com/prosopo/server#readme",
+  "sideEffects": false,
+  "dependencies": {
+    "@polkadot/api": "9.13.6",
+    "@polkadot/keyring": "10.3.1",
+    "@polkadot/rpc-provider": "9.13.6",
+    "@polkadot/types": "9.13.6",
+    "@prosopo/api": "^0.1.11",
+    "@prosopo/contract": "^0.1.11",
+    "@prosopo/types": "^0.1.11"
+  }
 }
