--- a/packages/types-db/package.json
+++ b/packages/types-db/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@prosopo/types",
+  "name": "@prosopo/types-db",
   "version": "0.1.11",
-  "description": "Types for prosopo TypeScript packages",
+  "description": "Types for prosopo database",
   "main": "dist/index.js",
   "scripts": {
     "clean": "tsc --build --clean",
@@ -10,25 +10,23 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/prosopo/types.git"
+    "url": "git+ssh://git@github.com/prosopo/captcha.git"
   },
   "author": "Prosopo Limited",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/prosopo/types/issues"
+    "url": "https://github.com/prosopo/captcha/issues"
   },
-  "homepage": "https://github.com/prosopo/types#readme",
+  "homepage": "https://github.com/prosopo/captcha#readme",
   "dependencies": {
-    "consola": "^2.15.3",
-    "@polkadot/api": "9.13.6",
-    "@polkadot/api-contract": "9.13.6",
     "@polkadot/types": "9.13.6",
     "@prosopo/common": "^0.1.11",
+    "@prosopo/types": "^0.1.11",
+    "mongodb": "4.8.1",
+    "mongoose": "^6.7.2",
     "zod": "^3.17.9"
   },
   "devDependencies": {
-    "@types/node": "^18.0.6",
-    "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
   "sideEffects": false
