--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -13,7 +13,7 @@
     "@polkadot/keyring": "10.3.1",
     "@polkadot/util": "10.3.1",
     "@polkadot/util-crypto": "10.3.1",
-    "@prosopo/common": "0.1.11"
+    "@prosopo/common": "^0.1.11"
   },
   "devDependencies": {
     "typescript": "^4.8.3"
