--- a/packages/procaptcha-react/tsconfig.json
+++ b/packages/procaptcha-react/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
-    "module": "esnext",
+    "module": "commonjs",
     "target": "esnext",
     "lib": [
       "es6",
