--- a/package.json
+++ b/package.json
@@ -91,6 +91,8 @@
   ],
   "devDependencies": {
     "babel-plugin-import": "^1.13.6",
+    "@parcel/packager-ts": "^2.8.3",
+    "@parcel/transformer-typescript-types": "^2.8.3",
     "depcheck": "^1.4.3",
     "eslint-plugin-absolute-imports-only": "^1.0.1",
     "nodemon": "^2.0.20",
