--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/react": "^18.0.25",
+    "consola": "^3.1.0",
     "dotenv": "^16.0.1",
     "i18next": "^21.9.2",
     "i18next-browser-languagedetector": "^6.1.5",
