--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -5,13 +5,41 @@
   "license": "Apache-2.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "source": "./src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "tsc --build --clean",
+    "build": "tsc --build --verbose",
     "start": "webpack serve --mode development",
-    "build": "webpack --mode production",
+    "build:webpack:prod": "webpack --mode production",
+    "build:webpack:dev": "webpack --mode development",
     "lint": "npx eslint .",
-    "lint:fix": "npx eslint . --fix"
+    "lint:fix": "npx eslint . --fix",
+    "build:parcel": "parcel build src/index.ts --reporter @parcel/reporter-bundle-analyzer",
+    "build:rollup": "rollup rollup.config.js"
+  },
+  "browserslist": [
+    "> 0.5%, last 2 versions, not dead"
+  ],
+  "targets": {
+    "main": {
+      "context": "node",
+      "engines": {
+        "node": ">= 12"
+      },
+      "includeNodeModules": [
+        "@prosopo/common",
+        "@prosopo/procaptcha",
+        "@polkadot/api",
+        "@polkadot/extension-dapp",
+        "@polkadot/keyring",
+        "@polkadot/util",
+        "@polkadot/util-crypto",
+        "consola",
+        "tslib"
+      ],
+      "isLibrary": true
+    }
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -25,8 +53,7 @@
     "@prosopo/common": "^0.1.11",
     "@prosopo/procaptcha": "^0.1.11",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "schema-utils": "^4.0.1"
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.5",
@@ -35,20 +62,25 @@
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
     "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.30.7",
     "babel-loader": "^9.1.2",
     "babel-plugin-lodash": "^3.3.4",
     "compression-webpack-plugin": "^10.0.0",
     "css-loader": "^6.7.3",
-    "eslint": "^8.20.0",
+    "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.5",
+    "parcel": "^2.8.3",
     "style-loader": "^3.3.2",
     "terser-webpack-plugin": "^5.3.7",
     "typescript": "^4.7.4",
@@ -56,7 +88,8 @@
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3",
-    "webpack-json-access-optimizer": "^1.1.0"
+    "webpack-json-access-optimizer": "^1.1.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "repository": {
     "type": "git",
