--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -12,7 +12,6 @@
     "build:scripts": "tsc --build --verbose tsconfig.scripts.json",
     "build:config": "tsc --project",
     "cli": "node ./dist/cli/cli.js",
-    "setup": "node ./dist/cli/setup.js",
     "start": "node ./dist/cli/start.js",
     "serve": "npm run setup && npm run start",
     "mnemonic": "ts-node ./scripts/generateMnemonic.ts",
@@ -33,8 +32,11 @@
     "@polkadot/util-crypto": "10.3.1",
     "@prosopo/common": "^0.1.11",
     "@prosopo/contract": "^0.1.11",
+    "@prosopo/database": "^0.1.11",
     "@prosopo/datasets": "^0.1.11",
     "@prosopo/types": "^0.1.11",
+    "@prosopo/types-database": "^0.1.11",
+    "@prosopo/types-env": "^0.1.11",
     "@prosopo/env": "^0.1.11",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
