--- a/packages/types-database/package.json
+++ b/packages/types-database/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@prosopo/types-env",
+  "name": "@prosopo/types-database",
   "version": "0.1.11",
-  "description": "Types for prosopo environment",
+  "description": "Types for prosopo database",
   "main": "dist/index.js",
   "scripts": {
     "clean": "tsc --build --clean",
@@ -19,11 +19,12 @@
   },
   "homepage": "https://github.com/prosopo/captcha#readme",
   "dependencies": {
-    "@polkadot/keyring": "10.3.1",
     "@polkadot/types": "9.13.6",
     "@prosopo/common": "^0.1.11",
     "@prosopo/types": "^0.1.11",
-    "@prosopo/database": "^0.1.11"
+    "mongodb": "4.8.1",
+    "mongoose": "^6.7.2",
+    "zod": "^3.17.9"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
