--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -1,8 +1,8 @@
-name: Tests
+name: Provider Tests
 
 on:
   pull_request:
-    branches: [ develop, main ]
+    branches: [ main ]
 
 env:
   CARGO_TERM_COLOR: always
