remove old git files. remove debug. add dependency to tsconfig.json

--- a/packages/provider/tsconfig.json
+++ b/packages/provider/tsconfig.json
@@ -20,6 +20,9 @@
       "path": "../contract"
     },
     {
+      "path": "../database"
+    },
+    {
       "path": "../datasets"
     },
     {
