--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -98,11 +98,15 @@ jobs:
           npm install
 
       - name: Build provider and dependencies
+        # Next few lines should contain the number of packages that provider depends on (check tsconfig.json)
         run: |
           cd captcha
           echo $(npx tsc --version)
           cd packages/common && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
           cd ../types && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
+          cd ../types-database && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
+          cd ../types-env && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
+          cd ../database && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
           cd ../env && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
           cd ../datasets && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
           cd ../contract && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
@@ -117,6 +121,8 @@ jobs:
           git status | head -n 1
           docker container ls
           cat .env.development
+          cd ..
+          cd dev && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
           NODE_ENV=$ENVIRONMENT npm run test
 
       - name: Remove the docker containers
