--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "@polkadot/util-crypto": "10.3.1",
-    "@prosopo/common": "^0.1.11"
+    "@prosopo/common": "^0.1.11",
+    "@prosopo/contract": "^0.1.11",
+    "@prosopo/database": "^0.1.11",
+    "@prosopo/types": "^0.1.11",
+    "@prosopo/types-database": "^0.1.11",
+    "@prosopo/types-env": "^0.1.11"
   },
   "devDependencies": {
     "typescript": "^4.8.3"
