remove old commands. try to run tests from workspace root

--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -9,11 +9,10 @@
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
     "build:test": "tsc --build --verbose tsconfig.test.json",
-    "build:scripts": "tsc --build --verbose tsconfig.scripts.json",
     "build:config": "tsc --project",
     "serve": "npm run setup && npm run start",
     "mnemonic": "ts-node ./scripts/generateMnemonic.ts",
-    "test": "ts-mocha tests/**/*.test.ts --timeout 12000000 --recursive --exit",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "coverage": "npx c8 npm run test",
     "populate-data": "ts-node ./tests/dataUtils/populateDatabase.ts",
     "lint": "npx eslint .",
