--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -123,7 +123,7 @@ jobs:
           cat .env.development
           cd ../packages/cli && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
           cd dev && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
-          NODE_ENV=$ENVIRONMENT npm run test
+          cd .. && NODE_ENV=$ENVIRONMENT npm run test
 
       - name: Remove the docker containers
         run: |
