--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -30,15 +30,16 @@
     }
   },
   "dependencies": {
-    "@polkadot/api": "9.13.6",
-    "@polkadot/api-contract": "9.13.6",
-    "@polkadot/keyring": "10.3.1",
-    "@polkadot/rpc-provider": "9.13.6",
-    "@polkadot/typegen": "9.13.6",
-    "@polkadot/types": "9.13.6",
-    "@polkadot/types-create": "9.13.6",
-    "@polkadot/util": "10.3.1",
-    "@polkadot/util-crypto": "10.3.1",
+    "@polkadot/api": "10.7.1",
+    "@polkadot/api-augment": "10.7.1",
+    "@polkadot/api-contract": "10.7.1",
+    "@polkadot/keyring": "12.2.1",
+    "@polkadot/rpc-provider": "10.7.1",
+    "@polkadot/typegen": "10.7.1",
+    "@polkadot/types": "10.7.1",
+    "@polkadot/types-create": "10.7.1",
+    "@polkadot/util": "12.2.1",
+    "@polkadot/util-crypto": "12.2.1",
     "@prosopo/common": "^0.1.11",
     "@prosopo/types": "^0.1.11",
     "rxjs": "^7.8.1"
@@ -51,7 +52,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^5.0.4"
   },
   "repository": {
     "type": "git",
