make sure all packages have typescript as a dev dependency

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,5 +27,8 @@
     "@prosopo/api": "^0.1.11",
     "@prosopo/contract": "^0.1.11",
     "@prosopo/types": "^0.1.11"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.4"
   }
 }
