revert to relative imports

--- a/packages/procaptcha-react/tsconfig.json
+++ b/packages/procaptcha-react/tsconfig.json
@@ -13,5 +13,16 @@
   },
   "include": [
     "src"
+  ],
+  "references": [
+    {
+      "path": "../api"
+    },
+    {
+      "path": "../common"
+    },
+    {
+      "path": "../procaptcha"
+    }
   ]
 }
