--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -50,6 +50,7 @@
     "@polkadot/extension-dapp": "0.46.3",
     "@polkadot/extension-inject": "0.46.3",
     "@polkadot/types": "10.7.1",
+    "@prosopo/api": "^0.1.11",
     "@prosopo/common": "^0.1.11",
     "@prosopo/procaptcha": "^0.1.11",
     "react": "^17.0.0",
