Create contract import script in dev

--- a/package.json
+++ b/package.json
@@ -88,8 +88,7 @@
   "workspaces": [
     "packages/*",
     "demos/*",
-    "dev",
-    "scripts"
+    "dev"
   ],
   "devDependencies": {
     "@eslint/eslintrc": "^2.0.3",
