--- a/demos/client-example/tsconfig.json
+++ b/demos/client-example/tsconfig.json
@@ -16,7 +16,7 @@
   ],
   "references": [
     {
-      "path": "../packages/procaptcha-react"
+      "path": "../../packages/procaptcha-react"
     }
   ]
 }
