--- a/demos/client-example/package.json
+++ b/demos/client-example/package.json
@@ -12,7 +12,7 @@
     "bootstrap": "^5.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
