--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -11,7 +11,8 @@
         ],
     },
     "include": [
-        "./src/**/*.ts"
+        "./src/**/*.ts",
+        "./src/*.ts"
     ],
     "references": [
         {
