--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,7 +8,7 @@
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
     "cli": "node ./dist/cli/cli.js",
-    "start": "node ./dist/cli/start.js"
+    "start": "node ./dist/start.js"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
