--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -1,58 +1,59 @@
 {
-  "name": "@prosopo/procaptcha",
-  "version": "0.1.11",
-  "author": "PROSOPO LIMITED <info@prosopo.io>",
-  "license": "Apache-2.0",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "scripts": {
-    "test": "NODE_ENV=test ts-mocha \"tests/**/*.test.ts\" && exit 0",
-    "clean": "tsc --build --clean",
-    "build": "tsc --build --verbose",
-    "lint": "npx eslint .",
-    "lint:fix": "npx eslint . --fix"
-  },
-  "dependencies": {
-    "@fingerprintjs/fingerprintjs": "^3.3.6",
-    "@polkadot/api": "9.13.6",
-    "@polkadot/api-contract": "9.13.6",
-    "@polkadot/extension-base": "0.44.8",
-    "@polkadot/extension-dapp": "0.44.8",
-    "@polkadot/extension-inject": "0.44.8",
-    "@polkadot/keyring": "10.3.1",
-    "@polkadot/rpc-provider": "9.13.6",
-    "@polkadot/types": "9.13.6",
-    "@polkadot/util": "10.3.1",
-    "@polkadot/util-crypto": "10.3.1",
-    "@prosopo/api": "^0.1.11",
-    "@prosopo/contract": "^0.1.11",
-    "@prosopo/types": "^0.1.11",
-    "@prosopo/common": "^0.1.11",
-    "axios": "^0.27.2"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
-    "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "mocha": "^10.0.0",
-    "ts-mocha": "^10.0.0",
-    "typescript": "^4.7.4"
-  },
-  "keywords": [],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/prosopo/captcha.git"
-  },
-  "bugs": {
-    "url": "https://github.com/prosopo/captcha/issues"
-  },
-  "homepage": "https://github.com/prosopo/captcha#readme",
-  "description": "",
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org"
-  },
-  "sideEffects": false
+    "name": "@prosopo/procaptcha",
+    "version": "0.1.11",
+    "author": "PROSOPO LIMITED <info@prosopo.io>",
+    "license": "Apache-2.0",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "scripts": {
+        "test": "NODE_ENV=test ts-mocha \"tests/**/*.test.ts\" && exit 0",
+        "clean": "tsc --build --clean",
+        "build": "tsc --build --verbose",
+        "lint": "npx eslint .",
+        "lint:fix": "npx eslint . --fix"
+    },
+    "dependencies": {
+        "@fingerprintjs/fingerprintjs": "^3.3.6",
+        "@polkadot/api": "9.13.6",
+        "@polkadot/api-contract": "9.13.6",
+        "@polkadot/extension-base": "0.44.8",
+        "@polkadot/extension-dapp": "0.44.8",
+        "@polkadot/extension-inject": "0.44.8",
+        "@polkadot/keyring": "10.3.1",
+        "@polkadot/rpc-provider": "9.13.6",
+        "@polkadot/types": "9.13.6",
+        "@polkadot/util": "10.3.1",
+        "@polkadot/util-crypto": "10.3.1",
+        "@prosopo/api": "^0.1.11",
+        "@prosopo/contract": "^0.1.11",
+        "@prosopo/types": "^0.1.11",
+        "@prosopo/common": "^0.1.11",
+        "axios": "^0.27.2",
+        "rxjs": "^7.8.0"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.30.7",
+        "@typescript-eslint/parser": "^5.30.7",
+        "eslint": "^8.20.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-unused-imports": "^2.0.0",
+        "mocha": "^10.0.0",
+        "ts-mocha": "^10.0.0",
+        "typescript": "^4.7.4"
+    },
+    "keywords": [],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/prosopo/captcha.git"
+    },
+    "bugs": {
+        "url": "https://github.com/prosopo/captcha/issues"
+    },
+    "homepage": "https://github.com/prosopo/captcha#readme",
+    "description": "",
+    "publishConfig": {
+        "registry": "https://registry.npmjs.org"
+    },
+    "sideEffects": false
 }
