--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,16 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
-    "cli": "node ./dist/cli/cli.js",
-    "start": "node ./dist/cli/start.js"
+    "cli": "ts-node ./src/cli/cli.js",
+    "start": "ts-node ./src/cli/start.js"
   },
   "dependencies": {
-    "dotenv": "^16.0.1",
     "@polkadot/util-crypto": "10.3.1",
     "@prosopo/common": "^0.1.11",
     "@prosopo/env": "^0.1.11",
     "@prosopo/provider": "^0.1.11",
-    "@prosopo/types": "^0.1.11"
+    "@prosopo/types": "^0.1.11",
+    "dotenv": "^16.0.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "typescript": "^4.8.3"
