--- a/package.json
+++ b/package.json
@@ -72,8 +72,9 @@
     "ls:ws": "npm run --workspaces env | grep npm_package_name | cut -d '=' -f 2",
     "setup": "npm -w @prosopo/dev run setup",
     "start:provider": "npm -w @prosopo/cli run start",
-    "server": "npm -w @prosopo/client-example-server run start",
-    "demo": "npm -w @prosopo/client-example run start",
+    "start:server": "npm -w @prosopo/client-example-server run start",
+    "start:demo": "npm -w @prosopo/client-example run start",
+    "start:bundle": "npm -w client-bundle-example run start",
     "provider": "npm -w @prosopo/provider run cli",
     "populate-data": "npm -w @prosopo/provider run populate-data",
     "test": "npm -w @prosopo/dev run test",
@@ -104,7 +105,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "nodemon": "^2.0.20",
     "npm-check-updates": "^15.3.4",
-    "tslib": "^2.4.0",
+    "tslib": "^2.5.2",
     "tslint-plugin-prettier": "^2.3.0",
     "typescript": "^4.7.4"
   },
