--- a/packages/procaptcha-bundle/package.json
+++ b/packages/procaptcha-bundle/package.json
@@ -37,26 +37,7 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
-  "targets": {
-    "main": {
-      "context": "node",
-      "engines": {
-        "node": ">= 12"
-      },
-      "includeNodeModules": [
-        "@prosopo/common",
-        "@prosopo/procaptcha",
-        "@polkadot/api",
-        "@polkadot/extension-dapp",
-        "@polkadot/keyring",
-        "@polkadot/util",
-        "@polkadot/util-crypto",
-        "consola",
-        "tslib"
-      ],
-      "isLibrary": true
-    }
-  },
+
   "devDependencies": {
     "@babel/core": "^7.21.5",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -84,6 +65,8 @@
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.5",
     "parcel": "^2.8.3",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "style-loader": "^3.3.2",
     "terser-webpack-plugin": "^5.3.7",
     "typescript": "^4.7.4",
@@ -91,7 +74,6 @@
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-dev-server": "^4.13.3",
     "webpack-json-access-optimizer": "^1.1.0",
-    "webpack-node-externals": "^3.0.0",
     "webpack-cli": "^5.1.1"
   }
 }
