Fix client example (#88)
* fixes #87

* Fix client example and client example bundle in dev mode

* Working production bundle

* use the correct container for testing

* Fix test runner and add details to README.

--- a/packages/procaptcha-bundle/tsconfig.json
+++ b/packages/procaptcha-bundle/tsconfig.json
@@ -12,8 +12,12 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src/**/*.ts",
-    "src/*.ts",
-    "src/**/*.tsx",
+    "src/index.tsx",
+    "src/index.html"
+  ],
+  "references": [
+    {
+      "path": "../procaptcha-react"
+    }
   ]
 }
