--- a/docker/docker-compose.substrate.yml
+++ b/docker/docker-compose.substrate.yml
@@ -1,10 +1,10 @@
 version: '3.4'
 services:
-  substrate-node:
-    image: prosopo/substrate-node:polkadot-v0.9.43
+  substrate:
+    image: prosopo/substrate:polkadot-v0.9.43
     build:
       context: .
-      dockerfile: ./images/substrate-node.build.dockerfile
+      dockerfile: ./images/substrate.build.dockerfile
     ports:
       - "9615:9615"
       - "9944:9944"
