--- a/docker/docker-compose.substrate-contracts-node.yml
+++ b/docker/docker-compose.substrate-contracts-node.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 services:
-  substrate-node:
-    image: prosopo/substrate-contracts-node:dev
+  substrate:
+    image: prosopo/substrate-contracts-node:v0.25
     build:
       context: .
       dockerfile: ./images/substrate-contracts-node.build.dockerfile
