--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   substrate:
-    image: prosopo/substrate:demo-v1.0.5
+    image: prosopo/substrate-contracts-node:v0.25
     ports:
       - "9615:9615"
       - "9944:9944"
