--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -12,3 +12,19 @@ services:
         limits:
           cpus: '1'
           memory: 512M
+  database:
+    image: mongo:5.0.4
+    # volumes:
+    #   - ./db:/data/db
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
+      - MONGO_INITDB_DATABASE=prosopo
+    deploy:
+      replicas: 1
+      resources:
+        limits:
+          cpus: '1'
+          memory: 512M
